Moving build on travis to Java8 and removing useless perm gen settings